--- a/zuopinzhan/index.html
+++ b/zuopinzhan/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <style>
-        /*.container{*/
-            /*width: 500px;height: 500px;*/
-            /*border: 1px solid red;
-        }*/
+        .container{
+            width: 800px;height: 50px;
+        }
+        .container a:link{
+            color:blue
+        }
+        .container a:hover{
+            color: #65fbff;
+        }
+        /*.container a:visited{*/
+            /*color: #ff2153;*/
+        /*}*/
     </style>
 </head>
 <body>
@@ -18,8 +26,8 @@
     <a href="https://liudamao.github.io/boot/bootstrap.html">Bootstrap</a>
     <a href="https://liudamao.github.io/tianmao/index.html">天猫</a>
     <a href="https://liudamao.github.io/qiyezhan1/index.html">企业站1</a>
-    <a href="https://liudamao.github.io/qiyezhan2/index2.html">企业站2</a>
-    <a href="https://liudamao.github.io/qiyezhan3/index3.html">企业站3</a>
+    <!--<a href="https://liudamao.github.io/qiyezhan2/index2.html">企业站2</a>-->
+    <!--<a href="https://liudamao.github.io/qiyezhan3/index3.html">企业站3</a>-->
     <a href="https://liudamao.github.io/yidongduan/index-one.html">登录</a>
     <a href="https://liudamao.github.io/yidongduan/index-two.html">注册</a>
     <a href="https://liudamao.github.io/yidongduan/index-three.html">找回密码</a>
