--- a/qiyezhan1/index.html
+++ b/qiyezhan1/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="menu">
                 <a href="#">首页</a>
-                <a href="#">关于海鸟</a>
+                <a href="https://liudamao.github.io/qiyezhan2/index2.html">关于海鸟</a>
                 <a href="#">海鸟民宿</a>
                 <a href="#">最新动态</a>
                 <a href="#">在线预约</a>
@@ -74,7 +74,7 @@
                         <span>1946</span>
                     </div>
                 </div>
-                <a href="#" class="displays"><img src="images/shuangchang.jpg" alt=""></a>
+                <a href="https://liudamao.github.io/qiyezhan3/index3.html" class="displays"><img src="images/shuangchang.jpg" alt=""></a>
             </div>
             <div class="rights all">
                 <div class="lights">
