--- a/resume/index.html
+++ b/resume/index.html
@@ -2,13 +2,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>个人网站</title>
 	<script src="./js/jquery.min.js"> </script>
 	<link href="./css/bootstrap.css" rel='stylesheet' type='text/css' />
-	<link href="./css/style.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="./css/index.css" rel="stylesheet" type="text/css" media="all" />
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script type="application/x-javascript">
         addEventListener("load", function() {
             setTimeout(hideURLbar, 0);
@@ -65,7 +68,7 @@
 			      <div class="bannerhead">
 				      <h3>刘超</h3>
 				      <h3>前端工程师</h3>
-				      <p>对前端行业有浓厚的兴趣，学习能力好；对工作充满热情，保持积极乐观的心态；全面掌握开发技术；具有很强的团队精神和协调能力。经常在脉脉和掘金等网站关注最新技术与前端形势。</p>
+				      <p>对前端行业有浓厚的兴趣，学习能力好；对工作充满热情，保持积极乐观的心态；全面掌握开发技术；具有很强的团队精神和协调能力。经常在CNDS和掘金等网站关注最新技术与前端形势。</p>
 					  <a class="downarrow scroll" href="#about"><span> </span></a>
 			      </div>
 			 </div>
@@ -85,9 +88,9 @@
 				  <h2><span> </span>关于我<span> </span></h2>
                </div>
 			  <div class="years">
-                  <h4><b>2016年3月</b></h4>
+                  <h4><b>2016年3月-2017年6月</b></h4>
                   <span><h4>杭州吾诺瀚卓网络科技有限公司</h4></span>
-                  <h4><b>前端工程师</b></h4>
+                  <h4>前端工程师</h4>
                   <p>1.负责公司PC端和移动端开发工作。</p>
                   <p>2.根据需求利用js、jquery等实现页面的制作和效果的实现。</p>
                   <p>3.完成页面脚本程序编写，实现各类页面动态，交互效果。根据需求调整、修改、优化页面。</p>
@@ -112,7 +115,7 @@
                           <div class="skill-grids text-center">
                               <div class="col-md-3">
                                   <div class="skill-grid">
-                                      <div class="skill">熟练掌握语义化的 HTML 和具有兼容性的 CSS 模式，熟练手写符合 W3C 标准的结构和代码。对HTML5和CSS3有一定的了解，可以熟练的使用H5和CCS3完成页面布局</div>
+                                      <div class="skill">熟练掌握语义化的 HTML 和具有兼容性的 CSS 模式，熟练手写符合 W3C 标准的结构和代码。对HTML5和CSS3有一定的了解，可以熟练的使用HTML5和CSS3完成页面布局</div>
                                   </div>
                               </div>
                               <div class="col-md-3">
@@ -122,12 +125,12 @@
                               </div>
                               <div class="col-md-3">
                                   <div class="skill-grid">
-                                      <div class="skill">熟悉Nodejs，MySQl，有一定 PHP 后端相关知识，自己写过phpmvc框架。了解 Ajax 工作原理和实现方法。</div>
+                                      <div class="skill">熟悉Node.js，MySQl，有一定 PHP 后端相关知识，自己写过phpmvc框架。熟悉phpcms后台管理系统。掌握 Ajax 工作原理和实现方法。</div>
                                   </div>
                               </div>
                               <div class="col-md-3">
                                   <div class="skill-grid">
-                                      <div class="skill">对前端canvas，git有一定了解。了解移动端开发,自己写过webapp。熟悉less,babel等预编译工具，可以使用webpack工程化构建工具</div>
+                                      <div class="skill">对前端canvas，git有一定了解。熟悉移动端开发,自己写过webapp。熟悉less,babel等预编译工具，可以使用webpack工程化构建工具</div>
                                   </div>
                               </div>
                               <div class="clearfix"> </div>
