--- a/resume/index.html
+++ b/resume/index.html
@@ -162,8 +162,8 @@
             <div class="portfolio-grid col-md-4">
                 <a href="#"><img src="./images/monitr2.png"></a>
                 <p>北京同仁堂科技发展有限公司</p>
-                <p>项目简介：医药类型官网，主要是企业信息和部分产品的展示。</p>
-                <p>项目负责：利用html+css实现页面布局，用js、jquery实现页面效果，并且利用phpcms作为后台管理系统。</p>
+                <p>项目简介：医药类型官网，企业信息和部分产品的展示。</p>
+                <p>项目负责：利用html+css实现页面布局，用js、jquery实现页面效果，利用phpcms作为后台管理系统。</p>
                 <a class="rightarrow" href="#"><span> </span></a>
             </div>
             <div class="portfolio-grid col-md-4">
@@ -187,7 +187,7 @@
                 <a href="#"><img src="./images/monitr2.png"></a>
                 <p>山西铁府文化艺术有限公司</p>
                 <p>项目简介：茶具展示类型网站</p>
-                <p>项目负责：该项目是由团队合作完成的。在整个项目中，我主要负责工艺作品和铸铁文化两个栏目的布局以及利用js和jquery来完成页面效果。</p>
+                <p>项目负责：该项目主要是由团队合作完成的。在整个项目中，我主要负责工艺作品和铸铁文化两个栏目的布局以及利用js和jquery来完成页面效果，并配合完善网页。</p>
                 <a class="rightarrow" href="#"><span> </span></a>
             </div>
             <div class="portfolio-grid col-md-4">
