--- a/resume/index.html
+++ b/resume/index.html
@@ -153,22 +153,22 @@
     <div class="container">
         <div class="portfolio-grids">
             <div class="portfolio-grid col-md-4">
-                <a href="#"><img src="./images/monitr1.png"></a>
+                <a href="http://wmtiefu.duapp.com/"><img src="./images/monitr1.png"></a>
                 <p>山西铁府文化艺术有限公司</p>
                 <p>项目简介：茶具展示类型网站。</p>
                 <p>项目负责：该项目是由团队合作完成的。在整个项目中，我主要负责工艺作品和铸铁文化两个栏目的布局以及利用js和jquery来完成页面效果。</p>
                 <a class="rightarrow" href="#"><span> </span></a>
             </div>
             <div class="portfolio-grid col-md-4">
-                <a href="#"><img src="./images/monitr2.png"></a>
+                <a href="http://bjtongrentang.duapp.com/"><img src="./images/monitr2.png"></a>
                 <p>北京同仁堂科技发展有限公司</p>
                 <p>项目简介：医药类型官网，企业信息和部分产品的展示。</p>
                 <p>项目负责：利用html+css实现页面布局，用js、jquery实现页面效果，利用phpcms作为后台管理系统。</p>
                 <a class="rightarrow" href="#"><span> </span></a>
             </div>
             <div class="portfolio-grid col-md-4">
-                <a href="#"><img src="./images/monitr3.png"></a>
-                <p>新闻阅读APP</p>
+                <a href="http://dailyzhihu.duapp.com/#!/"><img src="./images/monitr3.png"></a>
+                <p>新闻阅读</p>
                 <p>项目简介：用来进行新闻的实时更新及展示。</p>
                 <p>项目负责：利用AngularJs框架和指令实现页面布局的搭建以及页面之间的跳转，并且利用API接口实现新闻数据的动态数据更新。</p>
                 <a class="rightarrow" href="#"><span> </span></a>
@@ -177,24 +177,24 @@
         </div>
         <div class="portfolio-grids">
             <div class="portfolio-grid col-md-4">
-                <a href="#"><img src="./images/monitr1.png"></a>
+                <a href="https://liudamao.github.io/weather/index.html"><img src="./images/monitr1.png"></a>
                 <p>天气预报 Webapp</p>
                 <p>项目简介：实现实时天气预报，切换城市获取天气预报等功能。</p>
                 <p>项目负责：在此项目中，我主要负责利用html和css来完成页面布局的实现，利用ajax完成数据的获取，利用和风天气API获取动态的天气信息。</p>
                 <a class="rightarrow" href="#"><span> </span></a>
             </div>
             <div class="portfolio-grid col-md-4">
-                <a href="#"><img src="./images/monitr2.png"></a>
-                <p>山西铁府文化艺术有限公司</p>
-                <p>项目简介：茶具展示类型网站</p>
-                <p>项目负责：该项目主要是由团队合作完成的。在整个项目中，我主要负责工艺作品和铸铁文化两个栏目的布局以及利用js和jquery来完成页面效果，并配合完善网页。</p>
+                <a href="https://liudamao.github.io/iCloud/index.html"><img src="./images/monitr2.png"></a>
+                <p>小程序的开发</p>
+                <p>项目简介：利用框架的小应用</p>
+                <p>项目负责：该项目主要是对Angularjs的一个小的使用，其实现通过Angularjs的双向数据绑定来完成实现数据的交互。其页面的完成主要是html和css。</p>
                 <a class="rightarrow" href="#"><span> </span></a>
             </div>
             <div class="portfolio-grid col-md-4">
                 <a href="#"><img src="./images/monitr3.png"></a>
-                <p>销冠企业网站</p>
-                <p>项目简介：一个有关房产供需平台的项目</p>
-                <p>项目负责：本项目主要用html和css完成页面的布局，并利用fullpage和swiper完成页面效果，在此项目中，我主要负责利用html和css来完成部分页面的布局。</p>
+                <p>图志教育</p>
+                <p>项目简介：一个有关教育类的网站</p>
+                <p>项目负责：本项目主要用html和css完成页面的布局，利用node.js完成前后台框架的搭建。在此项目中，我主要负责利用html和css来完成部分页面的布局。</p>
                 <a class="rightarrow" href="#"><span> </span></a>
             </div>
             <div class="clear"> </div>
