--- a/resume/index.html
+++ b/resume/index.html
@@ -154,7 +154,7 @@
         <div class="portfolio-grids">
             <div class="portfolio-grid col-md-4">
                 <a href="http://wmtiefu.duapp.com/"><img src="./images/tf.png"></a>
-                <p>山西铁府文化艺术有限公司</p>f
+                <p>山西铁府文化艺术有限公司</p>
                 <p>项目简介：茶具展示类型网站。</p>
                 <p>项目负责：该项目是由团队合作完成的。在整个项目中，我主要负责工艺作品和铸铁文化两个栏目的布局以及利用js和jquery来完成页面效果。</p>
                 <a class="rightarrow" href="http://wmtiefu.duapp.com/"><span> </span></a>
