--- a/resume/index.html
+++ b/resume/index.html
@@ -186,7 +186,7 @@
             <div class="portfolio-grid col-md-4">
                 <a href="https://liudamao.github.io/iCloud/index.html"><img src="./images/ic.png"></a>
                 <p>小程序的开发</p>
-                <p>项目简介：利用框架的小应用</p>
+                <p>项目简介：利用框架实现完成的小应用</p>
                 <p>项目负责：该项目主要是对Angularjs的一个小的使用，其实现通过Angularjs的双向数据绑定来完成实现数据的交互。其页面的完成主要是html和css。</p>
                 <a class="rightarrow" href="https://liudamao.github.io/iCloud/index.html"><span> </span></a>
             </div>
