--- a/resume/index.html
+++ b/resume/index.html
@@ -153,49 +153,49 @@
     <div class="container">
         <div class="portfolio-grids">
             <div class="portfolio-grid col-md-4">
-                <a href="http://wmtiefu.duapp.com/"><img src="./images/tf.png"></a>
+                <a href="http://wmtiefu.duapp.com/" target="_blank"><img src="./images/tf.png"></a>
                 <p>山西铁府文化艺术有限公司</p>
                 <p>项目简介：茶具展示类型网站。</p>
                 <p>项目负责：该项目是由团队合作完成的。在整个项目中，我主要负责工艺作品和铸铁文化两个栏目的布局以及利用js和jquery来完成页面效果。</p>
-                <a class="rightarrow" href="http://wmtiefu.duapp.com/"><span> </span></a>
+                <a class="rightarrow" href="http://wmtiefu.duapp.com/" target="_blank"><span> </span></a>
             </div>
             <div class="portfolio-grid col-md-4">
-                <a href="http://bjtongrentang.duapp.com/"><img src="./images/trt.png"></a>
+                <a href="http://bjtongrentang.duapp.com/" target="_blank"><img src="./images/trt.png"></a>
                 <p>北京同仁堂科技发展有限公司</p>
                 <p>项目简介：医药类型官网，用于企业信息的展示。</p>
                 <p>项目负责：利用html+css实现页面布局，用js、jquery实现页面效果，利用phpcms作为后台管理系统。</p>
-                <a class="rightarrow" href="http://bjtongrentang.duapp.com/"><span> </span></a>
+                <a class="rightarrow" href="http://bjtongrentang.duapp.com/" target="_blank"><span> </span></a>
             </div>
             <div class="portfolio-grid col-md-4">
-                <a href="http://dailyzhihu.duapp.com/#!/"><img src="./images/new.png"></a>
+                <a href="http://dailyzhihu.duapp.com/#!/" target="_blank"><img src="./images/new.png"></a>
                 <p>新闻阅读</p>
                 <p>项目简介：用来进行新闻的实时更新及展示。</p>
                 <p>项目负责：利用AngularJs框架和指令实现页面布局的搭建以及页面之间的跳转，并且利用API接口实现新闻数据的动态数据更新。</p>
-                <a class="rightarrow" href="http://dailyzhihu.duapp.com/#!/"><span> </span></a>
+                <a class="rightarrow" href="http://dailyzhihu.duapp.com/#!/" target="_blank"><span> </span></a>
             </div>
             <div class="clear"> </div>
         </div>
         <div class="portfolio-grids">
             <div class="portfolio-grid col-md-4">
-                <a href="https://liudamao.github.io/weather/index.html"><img src="./images/tq.png"></a>
+                <a href="https://liudamao.github.io/weather/index.html" target="_blank"><img src="./images/tq.png"></a>
                 <p>天气预报 Webapp</p>
                 <p>项目简介：实现实时天气预报，切换城市获取天气预报等功能。</p>
                 <p>项目负责：在此项目中，我主要负责利用html和css来完成页面布局的实现，利用ajax完成数据的获取，利用和风天气API获取动态的天气信息。</p>
-                <a class="rightarrow" href="https://liudamao.github.io/weather/index.html"><span> </span></a>
+                <a class="rightarrow" href="https://liudamao.github.io/weather/index.html" target="_blank"><span> </span></a>
             </div>
             <div class="portfolio-grid col-md-4">
-                <a href="https://liudamao.github.io/iCloud/index.html"><img src="./images/ic.png"></a>
+                <a href="https://liudamao.github.io/iCloud/index.html" target="_blank"><img src="./images/ic.png"></a>
                 <p>小程序的开发</p>
                 <p>项目简介：利用框架实现完成的小应用</p>
                 <p>项目负责：该项目主要是对Angularjs的一个小的使用，其实现通过Angularjs的双向数据绑定来完成实现数据的交互。其页面的完成主要是html和css。</p>
-                <a class="rightarrow" href="https://liudamao.github.io/iCloud/index.html"><span> </span></a>
+                <a class="rightarrow" href="https://liudamao.github.io/iCloud/index.html" target="_blank"><span> </span></a>
             </div>
             <div class="portfolio-grid col-md-4">
-                <a href="#"><img src="./images/monitr3.png"></a>
+                <a href="#" target="_blank"><img src="./images/monitr3.png"></a>
                 <p>图志教育</p>
                 <p>项目简介：一个有关教育类的网站</p>
                 <p>项目负责：本项目主要用html和css完成页面的布局，利用node.js完成前后台框架的搭建。在此项目中，我主要负责利用html和css来完成部分页面的布局。</p>
-                <a class="rightarrow" href="#"><span> </span></a>
+                <a class="rightarrow" href="#" target="_blank"><span> </span></a>
             </div>
             <div class="clear"> </div>
         </div>
