--- a/resume/index.html
+++ b/resume/index.html
@@ -92,10 +92,10 @@
                   <span><h4>杭州吾诺瀚卓网络科技有限公司</h4></span>
                   <h4>前端工程师</h4>
                   <p>1.负责公司PC端和移动端开发工作。</p>
-                  <p>2.根据需求利用js、jquery等实现页面的制作和效果的实现。</p>
+                  <p>2.根据需求利用JS，jQuery实现业务逻辑。利用ajax实现数据的交互。</p>
                   <p>3.完成页面脚本程序编写，实现各类页面动态，交互效果。根据需求调整、修改、优化页面。</p>
                   <p>4.协助开发人员解决项目开发中出现的问题。</p>
-                  <p>5.利用GitHub与其他开发人员进行协同开发工作。</p>
+                  <p>5.利用git与其他开发人员进行协同开发工作。</p>
                   <p>6.配合后台进行一些项目的测试。</p>
 			  </div>
                <a class="arrow scroll" href="#skills"><span> </span></a>
