--- a/resume/index.html
+++ b/resume/index.html
@@ -160,7 +160,7 @@
                 <a class="rightarrow" href="http://wmtiefu.duapp.com/" target="_blank"><span> </span></a>
             </div>
             <div class="portfolio-grid col-md-4">
-                <a href="http://bjtongrentangkj.duapp.com/" target="_blank"><img src="./images/trt.png"></a>
+                <a href="http://wmtiefu.duapp.com/" target="_blank"><img src="./images/trt.png"></a>
                 <p>北京同仁堂科技发展有限公司</p>
                 <p>项目简介：医药类型官网，用于企业信息的展示。</p>
                 <p>项目负责：利用html+css实现页面布局，用js、jquery实现页面效果，利用phpcms作为后台管理系统。</p>
