--- a/resume/index.html
+++ b/resume/index.html
@@ -184,9 +184,9 @@
                 <a class="rightarrow" href="https://liudamao.github.io/weather/index.html" target="_blank"><span> </span></a>
             </div>
             <div class="portfolio-grid col-md-4">
-                <a href="http://adba3s.duapp.com/" target="_blank"><img src="./images/ic.png"></a>
+                <a href="http://adba3s.duapp.com/" target="_blank"><img src="./images/duba.png"></a>
                 <p>读吧</p>
-                <p>项目简介：一个写作与阅读相结合的网站</p>
+                <p>项目简介：一个用于写作和阅读相结合的网站</p>
                 <p>项目负责：该项目主要是使用node.js、express开发框架，并结合mysql数据库对后台数据进行管理。</p>
                 <a class="rightarrow" href="http://adba3s.duapp.com/" target="_blank"><span> </span></a>
             </div>
