--- a/resume/index.html
+++ b/resume/index.html
@@ -187,7 +187,7 @@
                 <a href="http://adba3s.duapp.com/" target="_blank"><img src="./images/db.png"></a>
                 <p>读吧</p>
                 <p>项目简介：一个用于将写作和阅读相互结合的网站</p>
-                <p>项目负责：该项目主要是使用html和css完成前台页面的布局,同时也使用到了node.js、express开发框架，并结合mysql数据库对后台数据进行管理。</p>
+                <p>项目负责：该项目主要是使用html和css完成前台页面的布局,同时也使用到了node.js、express开发框架，并结合mysql数据库对后台数据进行增删改查。</p>
                 <a class="rightarrow" href="http://adba3s.duapp.com/" target="_blank"><span> </span></a>
             </div>
             <div class="portfolio-grid col-md-4">
