--- a/resume/index.html
+++ b/resume/index.html
@@ -130,7 +130,7 @@
                               </div>
                               <div class="col-md-3">
                                   <div class="skill-grid">
-                                      <div class="skill">对前端canvas，git有一定了解。熟悉移动端开发,自己写过webapp。熟悉less,babel等预编译工具，可以使用webpack工程化构建工具</div>
+                                      <div class="skill">对前端canvas，git有一定了解。熟悉移动端开发,自己写过webapp。熟悉less,babel等预编译语言，可以使用webpack工程化构建工具</div>
                                   </div>
                               </div>
                               <div class="clearfix"> </div>
