--- a/resume/index.html
+++ b/resume/index.html
@@ -191,11 +191,11 @@
                 <a class="rightarrow" href="http://adba3s.duapp.com/" target="_blank"><span> </span></a>
             </div>
             <div class="portfolio-grid col-md-4">
-                <a href="liudamao.github.io/iCloud/index.html" target="_blank"><img src="./images/ic.png"></a>
+                <a href="https://liudamao.github.io/iCloud/index.html" target="_blank"><img src="./images/ic.png"></a>
                 <p>小程序应用</p>
                 <p>项目简介：一个小的记录事件的应用</p>
                 <p>项目负责：本项目主要用html和css完成页面的布局，利用AngularJs框架和其双向数据绑定来实现数据的交互，在此项目中，我主要就是实现布局和一些业务逻辑。</p>
-                <a class="rightarrow" href="liudamao.github.io/iCloud/index.html" target="_blank"><span> </span></a>
+                <a class="rightarrow" href="https://liudamao.github.io/iCloud/index.html" target="_blank"><span> </span></a>
             </div>
             <div class="clear"> </div>
         </div>
