--- a/tel/tel.html
+++ b/tel/tel.html
@@ -12,18 +12,17 @@ button{
 	height: 40px;
 	background: #96beff;
 	border-radius: 5px;
+	position: absolute;
+	left: 0;right: 0;top: 0;bottom:0;
+	margin: auto;
 }
 
 </style>
 <body>
-<!-- <div class="btn">
-<a href="wtai://wp//mc;18829068028">callme </a>   
-</div> -->
-
-<button onclick="callphone()">联系ta</button>
+<button onclick="callphone()">请联系刘超</button>
 <script>
     function callphone(){    
-        window.location.href = "tel:10086";
+        window.location.href = "tel:188290680028";
     }
 </script>
 	
