--- a/tel/tel2.html
+++ b/tel/tel2.html
@@ -19,6 +19,6 @@ button{
 
 </style>
 <body>
-<button><a href="tel://10086">联系ta</a></button>
+<button><a href="tel:10086">联系ta</a></button>
 </body>
 </html>
