--- a/resume/index.html
+++ b/resume/index.html
@@ -88,8 +88,8 @@
 				  <h2><span> </span>关于我<span> </span></h2>
                </div>
 			  <div class="years">
-                  <h4><b>2016年3月-2017年6月</b></h4>
-                  <span><h4>杭州吾诺瀚卓网络科技有限公司</h4></span>
+                  <h4><b>2016年3月-2017年8月</b></h4>
+                  <span><h4>上海优递莱思信息科技有限公司</h4></span>
                   <h4>前端工程师</h4>
                   <p>1.负责公司PC端和移动端开发工作。</p>
                   <p>2.根据需求利用JS，jQuery实现业务逻辑。利用ajax实现数据的交互。</p>
