--- a/resume/index.html
+++ b/resume/index.html
@@ -96,7 +96,6 @@
                   <p>3.完成页面脚本程序编写，实现各类页面动态，交互效果。根据需求调整、修改、优化页面。</p>
                   <p>4.协助开发人员解决项目开发中出现的问题。</p>
                   <p>5.利用git与其他开发人员进行协同开发工作。</p>
-                  <p>6.配合后台进行一些项目的测试。</p>
 			  </div>
                <a class="arrow scroll" href="#skills"><span> </span></a>
            </div>
@@ -154,14 +153,14 @@
         <div class="portfolio-grids">
             <div class="portfolio-grid col-md-4">
                 <a href="http://wmtiefu.duapp.com/" target="_blank"><img src="./images/tf.png"></a>
-                <p>山西铁府文化艺术有限公司</p>
+                <p>铁府文化艺术有限公司</p>
                 <p>项目简介：茶具展示类型网站。</p>
                 <p>项目负责：该项目是由团队合作完成的。在整个项目中，我主要负责工艺作品和铸铁文化两个栏目的布局以及利用js和jquery来完成页面效果。</p>
                 <a class="rightarrow" href="http://wmtiefu.duapp.com/" target="_blank"><span> </span></a>
             </div>
             <div class="portfolio-grid col-md-4">
                 <a href="http://bjtongrentangkj.duapp.com/" target="_blank"><img src="./images/trt.png"></a>
-                <p>北京同仁堂科技发展有限公司</p>
+                <p>同仁堂科技发展有限公司</p>
                 <p>项目简介：医药类型官网，用于企业信息的展示。</p>
                 <p>项目负责：利用html+css实现页面布局，用js、jquery实现页面效果，利用phpcms作为后台管理系统。</p>
                 <a class="rightarrow" href="http://bjtongrentangkj.duapp.com/" target="_blank"><span> </span></a>
